using UnityEngine;
public interface ICelestialBody
{
    GameObject Initialize(string bodyName, string bodyData);
}

